--- a/Opmaak.html
+++ b/Opmaak.html
@@ -1,6 +1,6 @@
 <!--
     Opdracht:       -
-    Auteur:         Erwin van der Waal
+    Auteur:         Erwin van der Waal - Jelle van de Westelaken
     Aanmaakdatum:   -
     Bestandsnaam:   -
 -->
@@ -9,7 +9,7 @@
 <html>
     <head>
         <title>
-            Honk en sofbalvereniging
+            HSV Nederdijk
         </title>
         <link href="Stylesheet.css" rel="stylesheet" type="text/css">
         <meta name="description" content="Template HTML voor opdrachten">
@@ -17,13 +17,19 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <img src="HSV_logo_transparent.png">
-        <ul>
-            <li>Home</li>
-            <li>Team</li>
-            <li>Nieuws</li>
-            <li>Loterij</li>
-            <li>Contact</li>
-        </ul>
+
+        <div class="header">
+            <div class="menu-header">
+                <img src="HSV_logo_transparent.png" id="logo">
+                <ul id="menu">
+                    <li>Home</li>
+                    <li>Team</li>
+                    <li>Nieuws</li>
+                    <li>Loterij</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+
     </body>
 </html>
