dubbele punt toegevoegd

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <table>
         <tbody>
             <tr>
-                <td><label for="aanhefM">Heer</label><input type="radio" name="aanhef" value="M" id="aanhefM"></td><td><label  for="aanhefF">label>Mevrouw</label><input type="radio" name="aanhef" value="F" id="aanhefF">
+                <td><label for="aanhefM">Heer:</label><input type="radio" name="aanhef" value="M" id="aanhefM"></td><td><label  for="aanhefF">label>Mevrouw</label><input type="radio" name="aanhef" value="F" id="aanhefF">
                     <label for="naam">Naam:</label><input type="text" name="naam" id="naam"></td>
             </tr>
             <tr>
