some development stuff, name changes and css

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <title>
             HSV Nederdijk
         </title>
-        <link href="Stylesheet.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="Stylesheet.css">
         <meta name="description" content="Template HTML voor opdrachten">
         <meta name="keywords" content="template, HTML">
         <meta charset="UTF-8">
