mapjes toegevoegd voor overzicht / file management

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <title>
             HSV Nederdijk
         </title>
-        <link rel="stylesheet" type="text/css" href="Stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="style/Stylesheet.css">
         <meta name="description" content="Template HTML voor opdrachten">
         <meta name="keywords" content="template, HTML">
         <meta charset="UTF-8">
@@ -20,7 +20,7 @@
 
         <div class="header">
             <div class="menu-header">
-                <img src="HSV_logo_transparent.png" id="logo">
+                <img src="images/HSV_logo_transparent.png" id="logo">
                 <ul id="menu">
                     <li>Home</li>
                     <li>Team</li>
