--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>Test.</p>
+    <h1>Placeholder totdat menu is gemaakt</h1>
 
-
-<footer>Dit is de footer</footer>
 </body>
 </html>
