Nieuws aangemaakt en contact veranderd

--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,9 @@
             </ul>
         </div>
     </div>
-
-<form method="post" action="mailer.php">
+<main>
+    <h1>Contact</h1>
+    <form method="post" action="mailer.php">
     <table>
         <tbody>
             <tr>
@@ -44,7 +45,8 @@
             </tr>
         </tbody>
     </table>
-</form>
+    </form>
+</main>
 <footer></footer>
 </body>
 </html>
