--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,10 @@
     <table>
         <tbody>
             <tr>
-                <td><label for="aanhefM">Heer</label><input type="radio" name="aanhef" value="M" id="aanhefM"></td><td><label  for="aanhefF"><label>Mevrouw</label><input type="radio" name="aanhef" value="F" id="aanhefF">
-                    <label for="naam">Naam:</label><input type="text" name="naam" id="naam"></td>
+                <td><label>Aanhef:</label></td><td><label for="aanhefM">Heer</label><input type="radio" name="aanhef" value="M" id="aanhefM"><label  for="aanhefF"><label>Mevrouw</label><input type="radio" name="aanhef" value="F" id="aanhefF"></td>
+            </tr>
+            <tr>
+                <td><label for="naam">Naam:</label></td><td><input type="text" name="naam" id="naam"></td>
             </tr>
             <tr>
                 <td><label for="email">Email:</label></td><td><input type="email" name="email" id="email"></td>
