--- a/nieuws.html
+++ b/nieuws.html
@@ -27,14 +27,17 @@
     <article>
         <h2>Title 1</h2>
         <p>Paragraph 1</p>
+        <figure><img><figcaption></figcaption></figure>
     </article>
     <article>
             <h2>Title 2</h2>
             <p>Paragraph 2</p>
+            <figure><img><figcaption></figcaption></figure>
     </article>
     <article>
             <h2>Title 3</h2>
             <p>Paragraph 3</p>
+            <figure><img><figcaption></figcaption></figure>
     </article>
 </main>
 <footer>&copy; HSV 2019</footer>
