verandering layout overzicht

--- a/overzicht.html
+++ b/overzicht.html
@@ -8,6 +8,24 @@
         <meta name="description" content="Template HTML voor opdrachten">
         <meta name="keywords" content="template, HTML">
         <meta charset="UTF-8">
+        <style>
+            .lid{
+                float:left;
+                width:25%;
+                margin-bottom: 50px;
+            }
+            .lid table{
+                width: fit-content;
+            }
+            .lid img{
+                width:150px;
+            }
+            .lid figure{
+                width: fit-content;
+                float: right;
+                vertical-align:top;
+            }
+        </style>
     </head>
 <body>
     <div class="header">
@@ -24,7 +42,7 @@
     </div>
 <main>
     <h1>Overzicht</h1>
-    <article>
+    <article class="lid" class="lid">
             <h2>Jan Janssen</h2>
             <table>
                 <tbody>
@@ -39,9 +57,9 @@
                     </tr>
                 </tbody>
             </table>
-            <figure><img></figure>
-    </article>
-    <article>
+            <figure><img src="images/anon2.jpeg"></figure>
+    </article class="lid">
+    <article class="lid">
             <h2>Karen Ostersen</h2>
             <table>
                 <tbody>
@@ -56,9 +74,9 @@
                     </tr>
                 </tbody>
             </table>
-            <figure><img></figure>
-    </article>
-    <article>
+            <figure><img src="images/anon1.jpg"></figure>
+    </article class="lid">
+    <article class="lid">
             <h2>Josef Werve</h2>
             <table>
                 <tbody>
@@ -73,9 +91,9 @@
                     </tr>
                 </tbody>
             </table>
-            <figure><img></figure>
-    </article>
-    <article>
+            <figure><img src="images/anon2.jpeg"></figure>
+    </article class="lid">
+    <article class="lid">
             <h2>Joost Zwagen</h2>
             <table>
                 <tbody>
@@ -90,9 +108,9 @@
                     </tr>
                 </tbody>
             </table>
-            <figure><img></figure>
-    </article>
-    <article>
+            <figure><img src="images/anon2.jpeg"></figure>
+    </article class="lid">
+    <article class="lid">
             <h2>Jan Siste</h2>
             <table>
                 <tbody>
@@ -107,9 +125,9 @@
                     </tr>
                 </tbody>
             </table>
-            <figure><img></figure>
-    </article>
-    <article>
+            <figure><img src="images/anon2.jpeg"></figure>
+    </article class="lid">
+    <article class="lid">
             <h2>Sanne Wellhoven</h2>
             <table>
                 <tbody>
@@ -124,9 +142,9 @@
                     </tr>
                 </tbody>
             </table>
-            <figure><img></figure>
-    </article>
-    <article>
+            <figure><img src="images/anon1.jpg"></figure>
+    </article class="lid">
+    <article class="lid">
             <h2>Piet Kolle</h2>
             <table>
                 <tbody>
@@ -141,8 +159,8 @@
                     </tr>
                 </tbody>
             </table>
-            <figure><img></figure>
-    </article>
+            <figure><img src="images/anon2.jpeg"></figure>
+    </article class="lid">
 </main>
 <footer>&copy; HSV 2019</footer>
 </body>
