--- a/overzicht.html
+++ b/overzicht.html
@@ -16,6 +16,7 @@
             }
             .lid table{
                 width: fit-content;
+                display: inline-block;
             }
             .lid img{
                 width:150px;
@@ -47,7 +48,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>Leeftijd:20</td>
+                        <td>Leeftijd: 20</td>
                     </tr>
                     <tr>
                         <td>Sport: Honkbal</td>
@@ -64,7 +65,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>Leeftijd:22</td>
+                        <td>Leeftijd: 22</td>
                     </tr>
                     <tr>
                         <td>Sport: Honkbal</td>
@@ -81,7 +82,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>Leeftijd:24</td>
+                        <td>Leeftijd: 24</td>
                     </tr>
                     <tr>
                         <td>Sport: Softbal</td>
@@ -115,7 +116,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>Leeftijd:27</td>
+                        <td>Leeftijd: 27</td>
                     </tr>
                     <tr>
                         <td>Sport: Softbal</td>
@@ -132,7 +133,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>Leeftijd:21</td>
+                        <td>Leeftijd: 21</td>
                     </tr>
                     <tr>
                         <td>Sport: Softbal</td>
@@ -149,7 +150,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>Leeftijd:28</td>
+                        <td>Leeftijd: 28</td>
                     </tr>
                     <tr>
                         <td>Sport: Honkbal</td>
